# web-automation-agent

./: README.md
agent-backend/: pyproject.toml  pytest.ini
agent-backend/src/agent_backend/: instances.py  main.py
agent-backend/src/agent_backend/classes/: BrowserManager.py  Executor.py  Planner.py
agent-backend/src/agent_backend/routers/: agent.py
agent-backend/src/agent_backend/schemas/: request.py
agent-backend/src/agent_backend/scripts/: dev.py
agent-backend/src/agent_backend/tools/: playwright_functions.py
agent-backend/src/agent_backend/types/: llm.py  tool.py
agent-backend/src/agent_backend/utils/: browser_functions.py  llm_utils.py  prompts.py
agent-backend/tests/: test_executor.py  test_get_element_by.py  test_integration_playwright.py  test_planner.py  test_playwright_functions.py  test_simple_debug.py
agent-visualizer/: package-lock.json  package.json
