[project]
name = "agent-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "rpw1134",email = "ryanw1134@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "agent_backend", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
