[project]
name = "agent-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "rpw1134",email = "ryanw1134@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright (>=1.56.0,<2.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "fastapi (>=0.123.0,<0.124.0)",
    "pytest-playwright (>=0.7.2,<0.8.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "openai (>=2.9.0,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]

[tool.poetry.scripts]
dev = "agent_backend.scripts.dev:dev"

[tool.poetry]
packages = [{include = "agent_backend", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
